--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node index.js"
+    "dev": "node index.js",
+    "lint": "eslint . --ext .js,.jsx,.ts..tsx",
+    "lint:fix": "eslint . --ext .js,.jsx,.tsx --fix",
+    "format": "prettier --write ."
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +16,9 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongoose": "^8.18.0"
+  },
+  "devDependencies": {
+    "eslint": "^9.35.0",
+    "prettier": "^3.6.2"
   }
 }
