fix: typo in ci.yml file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ on:
 # defining a job
 jobs:
   build-and-lint:
-    runs-on: ububtu-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
