--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,10 @@ jobs:
 
       - name: Install frontend dependencies
         working-directory: client
+        run: npm ci
+
+      - name: Lint frontend
+        working-directory: client
         run: npm run lint -- --max-warnings=0
 
       - name: Build backend image
